@@ -746,7 +746,9 @@ $wgMessageStructure = array(
 		'minlength',
 		'illegalfilename',
 		'badfilename',
-		'badfiletype',
+		'filetype-badtype',
+		'filetype-badmime',
+		'filetype-missing',
 		'large-file',
 		'largefileserver',
 		'emptyfile',
